added latest deal setion

--- a/flower.css
+++ b/flower.css
@@ -57,7 +57,32 @@
   width: 100%;
   color: aliceblue;
 }
+.col-one img {
+  border: 2px solid rgb(250, 243, 243);
+  border-radius: 10px;
+}
+.col-two {
+  border: 2px solid rgb(250, 230, 230);
+  border-radius: 20px;
+}
 
+/* this is our deal section */
+.latest-deal-section {
+  margin-bottom: 35px;
+}
+.deal-title {
+  justify-content: center;
+}
+.deal-image {
+  display: flex;
+  gap: 35px;
+  margin-left: 100px;
+}
+.deal-upper {
+  justify-content: center;
+}
+
+/* this is responsive section */
 /* Small Device Responsiveness */
 @media screen and (max-width: 576px) {
   .navbar {
@@ -68,6 +93,10 @@
     flex-direction: column-reverse;
   }
   .card-rows {
+    display: flex;
+    flex-direction: column;
+  }
+  .deal-image {
     display: flex;
     flex-direction: column;
   }
